fix picture overflow

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ html {
     height: 100vh;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 header {
     background-color: skyblue;
     z-index: 10;
